tests/invalid/MethodCall_Invalid_1.whiley
method f(int x) -> int:
    return 1

public export method test(&int _this):
    f(_this, 1)
